@@ -138,9 +138,6 @@
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
                     <release>${maven.compiler.release}</release>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -149,18 +146,12 @@
                 <version>${org.codehaus.mojo.version}</version>
                 <configuration>
                     <mainClass>de.maulmann.SiteBuilderPipeline</mainClass>
-                    <arguments>
-                        <argument>--enable-preview</argument>
-                    </arguments>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.6</version>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
             </plugin>
         </plugins>
 
